fix: Fix too large display of custom font

--- a/packages/docs/.vuepress/styles/index.styl
+++ b/packages/docs/.vuepress/styles/index.styl
@@ -36,7 +36,6 @@
   &.custom-menu
     h1, h2, h3, h4, h5, h6, p, ul, ol
       font-family 'Lato'
-      font-size-adjust 1
     img
       margin 0.5rem 0.5rem 0rem 0.5rem
       box-sizing border-box
